config-root/namespaces/jx-production/yolo/yolo-yolo-deploy.yaml
# Source: yolo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yolo-yolo
  labels:
    draft: draft-app
    chart: "yolo-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'yolo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: yolo-yolo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: yolo-yolo
    spec:
      serviceAccountName: yolo-yolo
      containers:
        - name: yolo
          image: "ghcr.io/rohatgisanat-amagi/yolo:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
